--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "toolcheck",
-  "version": "1.0.0",
+  "name": "enes100-safetylog",
+  "version": "0.0.0",
   "main": "index.html",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.2.0"
+    "vite": "^7.1.7"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "firebase": "^11.3.1"
+    "firebase": "^12.3.0"
   }
 }
